# elm-language-server

./: .gitignore  .gitmodules  :w  CONTRIBUTING.md  LICENSE  Makefile  README.md  cabal.config  cabal.sandbox.config  elm-language-server.cabal  package.yaml  sample.txt  sample2.txt  stack.yaml
app/: Main.hs
elm-compiler/src/AST/: Source.hs
elm-compiler/src/AST/Utils/: Binop.hs  Shader.hs
elm-compiler/src/Elm/: Name.hs  Package.hs
elm-compiler/src/Parse/: Parse.hs
elm-compiler/src/Reporting/: Annotation.hs  Region.hs  Result.hs
elm/src/Elm/: Version.hs
elm/src/Parse/Primitives/: Variable.hs
elm/src/Reporting/: Doc.hs
parser/src/AST/: Json.hs
parser/src/Reporting/: Error.hs  Report.hs
src/: ElmLanguageServer.hs  Main.hs  Misc.hs  Result.hs  Task.hs  Version.hs
src/Analyze/: Canonical.hs  Diagnostics.hs  Hover.hs  Oracle.hs  Search.hs
src/Analyze/Data/: Documentation.hs  ElmConfig.hs  Reference.hs
src/LSP/: Diagnostics.hs  Log.hs  MessageHandler.hs  Misc.hs  Model.hs  Server.hs  Types.hs  Update.hs
src/LSP/Data/: Capabilities.hs  Diagnostic.hs  DocumentFilter.hs  DocumentSelector.hs  ElmConfig.hs  Error.hs  FileChangeType.hs  FileEvent.hs  FileSystemWatcher.hs  Header.hs  IncomingMessage.hs  IncomingMethod.hs  Location.hs  Message.hs  MessageError.hs  Method.hs  Misc.hs  NotificationMethod.hs  OutgoingError.hs  OutgoingMessage.hs  Params.hs  Position.hs  Range.hs  Registration.hs  RequestMethod.hs  State.hs  TextDocumentIdentifier.hs  URI.hs  Unregistration.hs
src/LSP/MessageHandler/: Misc.hs  NotificationTextDocumentDidOpen.hs  RequestInitialize.hs  RequestTextDocumentHover.hs
src/LSP/Types/: Error.hs  IncomingMessage.hs  Location.hs  Method.hs  OutgoingError.hs  OutgoingMessage.hs  Position.hs  Range.hs
test/: Spec.hs
test/sample/elm-stuff/.lsp/clone/: elm.json
test/sample/elm-stuff/.lsp/clone/src/: Main.elm
test/sample/elm-stuff/0.19.0/: Main.elmi  Main.elmo
test/sample/src/: Main.elm
