name:           elm-language-server
version:        0.0.1
description:    Please see the README on GitHub at <https://github.com/jaredramirez/elm-language-server#readme>
homepage:       https://github.com/jaredramirez/elm-language-server#readme
bug-reports:    https://github.com/jaredramirez/elm-language-server/issues
author:         Jared Ramirez
maintainer:     jaredramirez@me.com
copyright:      2018 Jared Ramirez
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/jaredramirez/elm-language-server

flag dev {
  description: Turn off optimization and make warnings errors
  default: False
}

library
  hs-source-dirs:
      elm/src

  exposed-modules:
      Elm.Name
      Elm.Package
      Parse.Parse
      Reporting.Result
      Reporting.Error
      Reporting.Error.Syntax
      Reporting.Region
      AST.Valid
      AST.Source

  other-modules:
      AST.Canonical
      AST.Module.Name
      AST.Optimized
      AST.Utils.Binop
      AST.Utils.Shader
      AST.Utils.Type
      Data.Index
      Elm.Compiler.Imports
      Elm.Version
      Json.Decode
      Json.Decode.Error
      Json.Decode.Internals
      Json.Encode
      Optimize.DecisionTree
      Parse.Declaration
      Parse.Expression
      Parse.Module
      Parse.Pattern
      Parse.Primitives
      Parse.Primitives.Internals
      Parse.Primitives.Kernel
      Parse.Primitives.Keyword
      Parse.Primitives.Number
      Parse.Primitives.Shader
      Parse.Primitives.Symbol
      Parse.Primitives.Utf8
      Parse.Primitives.Variable
      Parse.Primitives.Whitespace
      Parse.Repl
      Parse.Shader
      Parse.Type
      Reporting.Annotation
      Reporting.Doc
      Reporting.Error.Canonicalize
      Reporting.Error.Docs
      Reporting.Error.Main
      Reporting.Error.Pattern
      Reporting.Error.Type
      Reporting.Render.Code
      Reporting.Render.Type
      Reporting.Render.Type.Localizer
      Reporting.Report
      Reporting.Suggest
      Reporting.Warning

  build-depends:
      ansi-terminal >=0.8 && <0.9
    , ansi-wl-pprint >=0.6.8 && <0.7
    , base >=4.8 && <5
    , binary >=0.8 && <0.9
    , bytestring >=0.9 && <0.11
    , containers >=0.5.8.2 && <0.6
    , directory >=1.2.3.0 && <2.0
    , filepath >=1 && <2.0
    , language-glsl >=0.0.2 && <0.3
    , edit-distance >=0.2.2.1 && <0.3
    , parsec
    , scientific
    , text >=1 && <2
    , unordered-containers
    , utf8-string
    , vector

  default-language: Haskell2010


executable elm-language-server-exe
  if flag(dev)
    ghc-options: -O0 -Wall -Werror
  else
    ghc-options: -O2 -fsimpl-tick-factor=200 -rtsopts

  main-is: Main.hs

  hs-source-dirs:
      src
      elm

  other-extensions: TemplateHaskell

  other-modules:
      Paths_elm_language_server
      Analyze.Hover
      LSP.Data.Capabilities
      LSP.Data.DocumentFilter
      LSP.Data.DocumentSelector
      LSP.Data.Error
      LSP.Data.Header
      LSP.Data.IncomingMessage
      LSP.Data.Location
      LSP.Data.Method
      LSP.Data.NotificationMethod
      LSP.Data.OutgoingError
      LSP.Data.OutgoingMessage
      LSP.Data.Params
      LSP.Data.Position
      LSP.Data.Range
      LSP.Data.Registration
      LSP.Data.RequestMethod
      LSP.Data.State
      LSP.Data.TextDocumentIdentifier
      LSP.Data.Unregistration
      LSP.Data.URI
      LSP.Log
      LSP.MessageHandler
      LSP.MessageHandler.Misc
      LSP.MessageHandler.NotificationTextDocumentDidOpen
      LSP.MessageHandler.RequestInitialize
      LSP.MessageHandler.RequestTextDocumentHover
      LSP.Server
      Misc

  build-depends:
      base >=4.8 && <5
    , elm-language-server
    , aeson
    , aeson-utils
    , base >=4.8 && <5
    , bytestring >=0.9 && <0.11
    , containers >=0.5.8.2 && <0.6
    , directory >=1.2.3.0 && <2.0
    , filepath >=1 && <2.0
    , text >=1 && <2
    , unordered-containers
    , utf8-string

  default-language: Haskell2010

test-suite elm-language-server-test
  type: exitcode-stdio-1.0

  main-is: Spec.hs

  other-modules:
      Paths_elm_language_server

  hs-source-dirs:
      test

  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      base >=4.8 && <5
    , elm-language-server
    , tasty >=1.1.0.3 && <1.2
    , tasty-hunit
    , bytestring >=0.9 && <0.11
    , text >=1 && <2
    , containers >=0.5.8.2 && <0.6

  default-language: Haskell2010
