name:           elm-language-server
version:        0.0.1
description:    Please see the README on GitHub at <https://github.com/jaredramirez/elm-language-server#readme>
homepage:       https://github.com/jaredramirez/elm-language-server#readme
bug-reports:    https://github.com/jaredramirez/elm-language-server/issues
author:         Jared Ramirez
maintainer:     jaredramirez@me.com
copyright:      2018 Jared Ramirez
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/jaredramirez/elm-language-server

flag dev {
  description: Turn off optimization and make warnings errors
  default: False
}

executable elm-language-server-exe
  ghc-options:
      -O2 -Wall -Wno-name-shadowing

  main-is: Main.hs

  hs-source-dirs:
      src
      parser/src
      markdown

  other-extensions: TemplateHaskell

  other-modules:
      Analyze.Data.Documentation
      Analyze.Diagnostics
      Analyze.Data.ElmConfig
      Analyze.Oracle
      AST.Declaration
      AST.Expression
      AST.Helpers
      AST.Json
      AST.Module
      AST.Pattern
      AST.V0_16
      AST.Variable
      Cheapskate.Inlines
      Cheapskate.Parse
      Cheapskate.ParserCombinators
      Cheapskate.Types
      Cheapskate.Util
      Elm.Utils
      LSP.Data.Capabilities
      LSP.Data.Diagnostic
      LSP.Data.DocumentFilter
      LSP.Data.DocumentSelector
      LSP.Data.Error
      LSP.Data.FileChangeType
      LSP.Data.FileEvent
      LSP.Data.FileSystemWatcher
      LSP.Data.Header
      LSP.Data.Location
      LSP.Data.Message
      LSP.Data.MessageError
      LSP.Data.NotificationMethod
      LSP.Data.Position
      LSP.Data.Range
      LSP.Data.Registration
      LSP.Data.RequestMethod
      LSP.Data.TextDocumentIdentifier
      LSP.Data.URI
      LSP.MessageHandler
      LSP.Misc LSP.Model
      LSP.Server
      LSP.Update
      Misc
      Paths_elm_language_server
      Parse.Binop
      Parse.Common
      Parse.Comments
      Parse.Declaration
      Parse.Expression
      Parse.Helpers
      Parse.IParser
      Parse.Literal
      Parse.Markdown
      Parse.Module
      Parse.Pattern
      Parse.Parse
      Parse.State
      Parse.Type
      Parse.Whitespace
      Reporting.Annotation
      Reporting.Error.Syntax
      Reporting.Region
      Reporting.Report
      Reporting.Result

  build-depends:
      base >=4.8 && <5
    , aeson
    , aeson-utils
    , base >=4.8 && <5
    , bytestring >=0.9 && <0.11
    , containers >=0.5.8.2 && <0.6
    , directory >=1.2.3.0 && <2.0
    , filepath >=1 && <2.0
    , hashable
    , indents >= 0.3.3 && < 0.4
    , json >= 0.9.1 && < 0.10
    , mtl >= 2.2.1 && < 3
    , process
    , parsec >= 3.1.11 && < 4
    , Glob
    , split >= 0.2.3.1 && < 0.3
    , text >=1 && <2
    , unordered-containers
    , utf8-string
    , vector

  default-language: Haskell2010

test-suite elm-language-server-test
  type: exitcode-stdio-1.0

  main-is: Spec.hs

  other-modules:
      Paths_elm_language_server

  hs-source-dirs:
      test

  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      base >=4.8 && <5
    , tasty >=1.1.0.3 && <1.2
    , tasty-hunit
    , bytestring >=0.9 && <0.11
    , text >=1 && <2
    , containers >=0.5.8.2 && <0.6

  default-language: Haskell2010
